--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "gsap": "^3.13.0",
+    "macaddress": "^0.5.3",
+    "moment": "^2.30.1",
+    "motion": "^12.23.12",
+    "node-machine-id": "^1.1.12",
+    "puppeteer": "^24.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "systeminformation": "^5.27.7",
     "tailwindcss": "^4.1.11",
     "tweakpane": "4"
   },
   "devDependencies": {
     "@tweakpane/core": "^2.0.5",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
