--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   $schema: "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  appId: "vn.momo.pmhub.logwork",
+  appId: "${name}",
   asar: true,
   productName: "PM Hub Auto Log Work",
   directories: {
