--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vn.momo.pmhub.logwork",
+  "productName": "PM Hub Auto Log Work",
   "private": true,
   "version": "0.0.1",
   "type": "module",
