fix build win, not use cache browser

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,9 +1,8 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   $schema: "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  appId: "${name}",
+  appId: "vn.momo.pmhub.logwork",
   asar: true,
-  // productName: "${productName}", //remove ở đây để lấy trong package.json
   directories: {
     output: "release/${version}",
     buildResources: "resources",
